# disableton

./: .gitignore  CMakeLists.txt  README.md
src/: main.cc
src/device/: device_config.cc
src/dma/: processing_dma.cc
src/include/: audio_endpoint.hh  device_config.hh  mcp3008_iface.h  processing.hh  processing_dma.hh
src/io/: audio_endpoint.cc  mcp3008_iface.c
tests/: audio_endpoint_test.cc  mcp3008_iface_test.cc
